# sidechains-zk

./: .gitignore  .scalafix.conf  Cargo.toml  README.md  Readme.md  build.sbt  scalastyle-config.xml
.github/workflows/: ci.yml
eddsa/: Cargo.toml  shell.nix
eddsa/src/: lib.rs
eddsa/tests/: eddsa.rs
jubjub/: .gitignore  .scalafmt.conf  build.sbt
jubjub-native/src/native/src/: lib.rs
jubjub/jubjub-bindings/src/main/scala/io/iohk/sidechains/jubjub/: JubjubJniBindings.scala  package.scala
jubjub/jubjub-bindings/src/test/scala/io/iohk/sidechains/: Hex.scala
jubjub/jubjub-bindings/src/test/scala/io/iohk/sidechains/jubjub/: JubjubJniBindingsSpec.scala
jubjub/jubjub-native/src/native/: Cargo.toml
jubjub/jubjub-native/src/native/src/: conversions.rs  lib.rs
jubjub/project/: Dependencies.scala  plugins.sbt
project/: Dependencies.scala  plugins.sbt
prover/: Cargo.toml  README.md  cbindgen.toml
prover/benches/: ConstrainCounts.md  atms.rs
prover/c-tests/: atms_halo2.c
prover/docs/: atms-primitives.md  docs-ecc.md  docs-encoding-io.md  docs-encoding.md  docs-rescue.md  ecc_twisted_edwards.md  flow.md  intro.md  notes-atms.md  notes-schnorr-primitive.md  primitive-atms.md  schnorr_primitive_sign.md
prover/docs/atms/: intro.md  notes.md  primitive.md
prover/docs/schnorr/: gate-verify.md  notes-primitive.md  primitive-sign.md  schnorr_primitive_verify.md
prover/docs/signatures/atms/: example.md  gate-verifier.md  intro.md  primitive.md
prover/docs/signatures/schnorr/: gate-verify.md  notes-primitive.md  primitive-sign.md  primitive-verify.md
prover/proptest-regressions/ecc/chip/: constants.txt
prover/src/: c_api.rs  docs.rs  ecc.rs  instructions.rs  lib.rs  main_gate.rs  proof.rs  prover.rs  schnorr.rs  util.rs  utilities.rs
prover/src/ecc/: chip.rs
prover/src/ecc/chip/: add.rs  constants.rs  mul.rs  mul_bin.rs  mul_fixed.rs  witness_point.rs
prover/src/ecc/chip/mul/: complete.rs  overflow.rs
prover/src/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
prover/src/encoding/: mod.rs
prover/src/rescue/: mod.rs  rescue_counter_mode.rs  rescue_crhf_gate.rs  rescue_perm_gate.rs  test_vectors.rs
prover/src/rescue/primitive/: bls12_381_params.rs  cipher.rs  crhf.rs  mod.rs  prp.rs  rescue_parameters.rs
prover/src/signatures/: atms.rs  mod.rs  schnorr.rs
prover/src/signatures/primitive/: mod.rs  schnorr.rs
prover/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
src/: lib.rs  proof.rs
