[package]
name = "eddsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = "0.13.0"
hex = "0.4.3"
jubjub = "0.10.0"
subtle = "2.5.0"
poseidon = { git = "https://github.com/iquerejeta/Poseidon252.git", rev = "650b06a" }
rand = "0.8.5"
sha2 = "0.10.6"

[dev-dependencies]
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
