[package]
name = "atms-halo2"
version = "0.1.0"
edition = "2021"

[lib]
name = "atms_halo2"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bls12_381 = "0.8.0"
jubjub = "0.10.0"
halo2curves = { git = "https://github.com/iquerejeta/halo2curves" }
halo2_proofs = { git = "https://github.com/iquerejeta/halo2" }
paste = "1"
poseidon = { git = "https://github.com/iquerejeta/Poseidon252"}
rand_core = "0.6.4"